<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/custom_toolbar" />



    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="22dp"
        android:layout_gravity="center"
        android:src="@drawable/user_placeholder" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_fname"
            android:layout_weight="1"
            android:drawableStart="@drawable/icon_name"
            android:drawablePadding="10dp"/>

<TextView
    android:layout_width="1dp"
    android:layout_height="25dp"
    android:background="@color/colorBackground"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lname"
            android:layout_weight="1"
            android:drawableStart="@drawable/icon_name"
            android:drawablePadding="10dp"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_contact_no"
        android:drawableStart="@drawable/icon_contact"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"/>

    <EditText
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_contact_name"
        android:drawableStart="@drawable/icon_name"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:drawableStart="@drawable/icon_email"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:drawableStart="@drawable/icon_password"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_confirm_password"
        android:drawableStart="@drawable/icon_password"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"/>

    <CheckBox
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_toc"
        android:button="@drawable/custom_checkbox"
        android:layout_marginTop="10dp" />


    <Button
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:id="@+id/btn_Signup"
        style="@style/ButtonLayout"
        android:text="@string/signup"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorText"
        android:background="@color/colorPrimary"
        android:textSize="16dp"/>

</LinearLayout>