<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="30dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/icon_email"
        android:hint="@string/hint_email"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/icon_password"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_Login"
        style="@style/ButtonLayout"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/tv_ForgotPassword"
        style="@style/ButtonLayout"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/forgotpassword"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_Signup"
        style="@style/ButtonLayout"
        android:layout_marginTop="90dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/donthaveanaccount"
        android:textColor="@color/colorPrimary" />

</LinearLayout>
