<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/custom_toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="57dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="17dp"
        android:text="@string/text"
        android:textSize="16sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginEnd23dp"
        android:layout_marginStart="@dimen/marginStart23dp"
        android:layout_marginTop="30dp"
        android:drawablePadding="10dp"

        android:drawableStart="@drawable/icon_email"
        android:hint="@string/hint_contact_no"
        android:inputType="phone" />

    <Button
        android:id="@+id/btn_Login"
        style="@style/ButtonLayout"
        android:layout_marginEnd="@dimen/marginEnd23dp"
        android:layout_marginStart="@dimen/marginStart23dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/continu"
        android:textColor="@color/colorText" />

</LinearLayout>
